[workspace]
members = [
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"client/consensus",
	"client/rpc-core",
	"client/rpc-core/tx-pool",
	"client/rpc",
	"client/rpc/tx-pool",
	"primitives/consensus",
	"primitives/evm",
	"primitives/rpc",
	"primitives/rpc/txpool",
	"pallets/ethereum-chain-id",
	"node",
	"runtime",
]