[package]
name = "fp-consensus"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
description = "Primitives for Frontier consensus"
license = "Apache-2.0"

[dependencies]
sp-std = { default-features = false, git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/selendra/substrate.git", branch = "master" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
]
