[package]
name = "precompiles"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
log = "0.4.8"
rustc-hex = { version = "2.0.1", default-features = false }

sp-std = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }

pallet-evm = { path = "../../frame/evm", default-features = false }
pallet-evm-precompile-dispatch = { path = "../../frame/evm/precompile/dispatch", default-features = false }
pallet-evm-precompile-modexp = { path = "../../frame/evm/precompile/modexp", default-features = false }
pallet-evm-precompile-simple = { path = "../../frame/evm/precompile/simple", default-features = false }

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"sp-core/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
]