[package]
name = "fc-rpc-core-txpool"
version = '0.1.0'
authors = ['Selendra <info@selendra.org>']
edition = '2018'
license = 'GPL-3.0-only'

[dependencies]
ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "master", features = ["with-codec"] }
ethereum-types = "0.10.0"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fc-rpc-core = { path = "../../rpc-core" }