[package]
name = "fc-rpc-txpool"
version = '0.1.0'
authors = ['Selendra <info@selendra.com>']
edition = '2018'
license = 'GPL-3.0-only'

[dependencies]
sha3 = "0.8"
jsonrpc-core = "15.0.0"
ethereum-types = "0.10.0"
ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "master", features = ["with-codec"] }

sp-runtime = { git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-std = { git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-blockchain = { git = "https://github.com/selendra/substrate.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/selendra/substrate.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }

fc-rpc-core-txpool = { path = "../../rpc-core/tx-pool" }
fp-rpc-txpool = { path = "../../../primitives/rpc/txpool" }