[package]
name = "fp-rpc-txpool"
version = '0.1.0'
authors = ['Selendra <info@selendra.org>']
edition = '2018'
license = 'GPL-3.0-only'

[dependencies]
ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "master", features = ["with-codec"], default-features = false }

sp-runtime = { git = "https://github.com/selendra/substrate.git", branch = "master", default-features = false }
sp-api = { git = "https://github.com/selendra/substrate.git", branch = "master", default-features = false }
sp-io = { git = "https://github.com/selendra/substrate.git", branch = "master", default-features = false }
sp-std = { git = "https://github.com/selendra/substrate.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
]